# ChangeLog for gnustep-base/gnustep-base
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnustep-base/gnustep-base/ChangeLog,v 1.118 2013/03/08 15:19:53 voyageur Exp $

*gnustep-base-1.24.3 (08 Mar 2013)

  08 Mar 2013; Bernard Cafarelli <voyageur@gentoo.org>
  +gnustep-base-1.24.3.ebuild:
  Version bump, adds new implementations for XML, TLS/SSL, and sorting
  algorithms

  05 Mar 2013; Bernard Cafarelli <voyageur@gentoo.org>
  gnustep-base-1.24.0-r1.ebuild:
  Use EAPI 5 and icu subslot, bug #455900

  28 Dec 2012; Bernard Cafarelli <voyageur@gentoo.org>
  gnustep-base-1.24.0-r1.ebuild,
  +files/gnustep-base-1.24.0-libxml2-2.9_support.patch:
  Fix compilation with dev-libs/libxml2-2.9.0, thanks Harris Landgarten
  <harrisl@lhjonline.com> in bug #448234

  20 Dec 2012; Bernard Cafarelli <voyageur@gentoo.org>
  -files/50-gnustep-revdep, -gnustep-base-1.20.1.ebuild:
  Remove version using old gnustep layout

  20 Dec 2012; Agostino Sarubbo <ago@gentoo.org> gnustep-base-1.24.0-r1.ebuild:
  Stable for sparc, wrt bug #410601

  07 Jun 2012; Michael Weber <xmw@gentoo.org> gnustep-base-1.24.0-r1.ebuild:
  ppc stable (bug 410601)

  02 May 2012; Jeff Horelick <jdhore@gentoo.org> gnustep-base-1.20.1.ebuild,
  gnustep-base-1.24.0-r1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  07 Apr 2012; Markus Meier <maekke@gentoo.org> gnustep-base-1.24.0-r1.ebuild:
  x86 stable, bug #410601

  05 Apr 2012; Agostino Sarubbo <ago@gentoo.org> gnustep-base-1.24.0-r1.ebuild:
  Stable for amd64, wrt bug #410601

*gnustep-base-1.24.0-r1 (23 Feb 2012)

  23 Feb 2012; Bernard Cafarelli <voyageur@gentoo.org>
  gnustep-base-1.20.1.ebuild, -gnustep-base-1.22.1.ebuild,
  -gnustep-base-1.24.0.ebuild, +gnustep-base-1.24.0-r1.ebuild:
  Update zeroconf dependencies (bug #405383), remove old unstable version

*gnustep-base-1.24.0 (08 Feb 2012)

  08 Feb 2012; Bernard Cafarelli <voyageur@gentoo.org>
  +gnustep-base-1.24.0.ebuild: