@@ -4,14 +4,16 @@ Hash: SHA256
 AUX gnustep-base-1.24.0-libxml2-2.9_support.patch 464 SHA256 486632073cd60bf53c44cc5873fcfefe7e9b19bc562aab21646f0843fa00dc6e SHA512 e5fe60bbb34dbdbe68550d70fea2099e37fcfdb08bb59770ba69e1b1b1573a00ee19c86590ac3c2c155ee2189abc5c7aa54855274653318aa1b78a78c504b5a0 WHIRLPOOL fc613cd49752790c4909fc766b7ae628a089fec8a301316767cffc7700d6a78234f8848df9fd1e93a2016a9af1ab69f072764b580d6243b720d93553b86f6f16
 DIST gnustep-base-1.24.0.tar.gz 2947759 SHA256 e07040e85a6bf3e89a9d66424a40dc8d3be749fbe7c0c98942cff5e4f35a6b11 SHA512 9232fed3439ee5e514e9c9194ef61ca8f1fbef294dc292e0b8ea0dd782e0e73ffda263f1a9e951e04d5dd379efae609f1f1a6ad4c9a606905a45b5daaa389049 WHIRLPOOL 9ed2f604829573efa91a212a9fe7bd7fa54f25cd8328e2d96ca86a57bbbcacd5bf1f6846ccf8aacc16190699cc43b58e5d2cc1c7dcafdf3e99ecaaae1f11b057
 DIST gnustep-base-1.24.3.tar.gz 3397779 SHA256 559d87c430846fa17816ea78c1c18a5df8f70f9d17f5c13abede9c66e50e252c SHA512 e712ac46c08b72a3be7210ad745f8378265a21f626f1e8748ba781503394df91b45ec3e1cd050159325c570689d34cf75423419078582212ff3d98c551ac06aa WHIRLPOOL 5babfe80b7fd99d184360f575a7e5c8bd935d92cc614b4788f78ce8e1f6cf7aa9c2f796785f68dba19e09fd7eeb9c30abe8c8479218aed6c866a48dec0c57908
+DIST gnustep-base-1.24.4.tar.gz 3424321 SHA256 193b939c76bd3ef8fb08a41fb08677d85c072b9352d648f1744d8a7361859d40 SHA512 37cff2c962d48bf715c0c31d7d96a06f7853af9a8ecca48a18b8890e368d060298acb9ac4b6bd135d2d2171a211170e7a5a6dcff3bfef72bfc378c377ec8426d WHIRLPOOL 4eb192f4bbfb72deb7ec3b2ab49ad797ff6450b13eddfcc2537142a6fb3c7151ea5f39215dac7980d4dbe75316346845a2fcf465074f20527015e0d408ffdf71
 EBUILD gnustep-base-1.24.0-r1.ebuild 2335 SHA256 917c89f8044399ad9fc9ddaeb60d6885a042206db9fd9a01c7715204d9c90d15 SHA512 76f8ee2352de7d1644bc42f68a82aec4439a369569866d4bcb4592f0575b02cb634b1edbedfdddb25c082cb5ca452084c443b5933d6674bf796f7d73de4c695d WHIRLPOOL f1fe8ea20f2d7f27daf694cf2dce05b06668394ad63dc0bb767e0a556524bf3d779a26a87b3ccb88efe7addb71cb2ea95f29bc1d59caaeeef21b433db24b8fe3
 EBUILD gnustep-base-1.24.3.ebuild 2264 SHA256 c2cce1f80573c4fe624b2b5a9a60d6af4aa482237e369a18048096be3467801e SHA512 37af0124510efa56901960df57d6ffcba01d5073e1aec160f8afacad4ced6c5a5dee2ca192086ad0368d1734c4a7a2a7eb27e7ae6069f61052ad990e1245c943 WHIRLPOOL 9943ab2e852f1f798bd0f56f94cb7d5bf58dc10bfa9e97c78a7610f0059fa389c6891cbf461970365ea2a48b3d9f76d72169320d9438c4734765d89439a573c4
-MISC ChangeLog 23857 SHA256 65e9f8537c2eaa023db164785985034147c767785be5f50f5c75e4402d8e459b SHA512 a0e06578681c87d796a9397e57f2d4cbcbc00017152d042efef9d088cfee3b19423bd92d4408bd7f0172cc8a15cae6f0532b611ffde1e8e0953c22966fc904b3 WHIRLPOOL b97b77ed50a146704dfc51a486b57fccfd5be7fc79f2ca241a3429df4a836d5ee9caf9cdb39a9ea52c4729695591cbc7c7ecd82f55819e964633b01fb50129e5
+EBUILD gnustep-base-1.24.4.ebuild 2264 SHA256 0a43e06eb95e5b775fd6c8c13c5180f7851df297b599937a96cc0be052a3a271 SHA512 8211583eefb43cfe5785e663ac246c5408bac7f8a56b06462f65809e6fa662ae79ffb474b399966d7c11fe9837fec43098f4d3725798f4c12e0e40a97f2b3861 WHIRLPOOL a32758c09110de181d33a40f0a2f13032a674aca77d7cf1eada0bef48564f86b7ad2ddb785930dc37ac3d0421e5e2c957a0f0eb339972e799f240027897fbbd4
+MISC ChangeLog 24011 SHA256 0618e9528d13cffb376f269ed0eeda24a84d3fe9b8ef4ad90122cb7cbf5a7d5a SHA512 15739d75db45c01e0c5c9dded95665744b64e6fabac17b506cf02b6dc24b986023f6630c824f813dfecc7edfea25a43adc55200aeee04835ebd4ebcdaac64f38 WHIRLPOOL 60fe9a9187e43c6f08a631fa24eae5b4c6be002dd81b8448d6d2240cac9d0194dd23c0053eb76ef7d2a13fb469ad6995e967c695aea3157d623824b1597ffbc3
 MISC metadata.xml 670 SHA256 e08343661cc7ecb6d963be62092a270a45f8af0201c9523d1feeddfa09a417fa SHA512 3901cb8078a5b3c4921f045c013b00598da50e083ee85e86d63de5f9fae9ac2ca7aec1887d706f5bd8a7787a39c08cfe2d255124d08cc3421b39c6b546fdc4f0 WHIRLPOOL c6f815e693ca9088cd0b216c459581a8241e3a3f027aac3fb8f8c94bd0e3fafc631df7ad79da33e9ac3e1fe6d00be0fcdcd57b122d0b679e922d6cc650e76d61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAlE6AZ8ACgkQFYEBGcdFJfJByAD/e9IhPL2ayFpg/YAVSBlvs82a
-R9uI1GpoCK7MIvCSAtYA/i8beIzlYzFFnMIJa/Zs/MbpsYwkHzq5xlrdfmhXteEn
-=wXCI
+iF4EAREIAAYFAlF4FPIACgkQFYEBGcdFJfKfxgD8D6klHZKRfude948ZpE9GmwZN
+jAIrhXiOXLaq0Xv7Z+0A/0knceF4tU4s/NT2rdB+pM4+xmrKIKPdOQsNzDZxlejC
+=h4J4
 -----END PGP SIGNATURE-----
