@@ -1,6 +1,12 @@
 # ChangeLog for gnustep-base/gnustep-base
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnustep-base/gnustep-base/ChangeLog,v 1.118 2013/03/08 15:19:53 voyageur Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnustep-base/gnustep-base/ChangeLog,v 1.119 2013/04/24 17:22:44 voyageur Exp $
+
+*gnustep-base-1.24.4 (24 Apr 2013)
+
+  24 Apr 2013; Bernard Cafarelli <voyageur@gentoo.org>
+  +gnustep-base-1.24.4.ebuild:
+  Version bump, minor bugfixes
 
 *gnustep-base-1.24.3 (08 Mar 2013)
 
